@@ -12,17 +12,12 @@ if ! travis_isPush; then
     exit 0
 fi
 
-#
-# for java9: enable all modules.
-# coveralls plugin seems to need java.xml.bind module
-echo "MAVEN_OPTS='-Xms1g -Xmx1g --add-modules java.se.ee'" > ${HOME}/.mavenrc
-
 (
     # disable fast fail, exit immediately, in this subshell
     set +e
 
     ./mvnw clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-    ./mvnw test jacoco:report coveralls:report -Pcoveralls -B -V
+    ./mvnw package jacoco:report coveralls:report -Pcoveralls -B -V
 
     if [ $? -ne 0 ]; then
         log_error "Error creating coveralls report"
